Editing for clarity

--- a/README.org
+++ b/README.org
@@ -10,7 +10,7 @@ For more details see below, but this is the minimum you need to make this work.
 3. Move it to your home directory (~mv ~/Downloads/.emacs ~/~)
 4. You are done, now restart ~emacs~ and take a look at the shortcut guide below
 
-* Overview
+* A Quick Overview
 ** Welcome New Org Mode Users
 So you want to use Org Mode, but you don't have 2 years to devote to teaching yourself Lisp? No problem. This repo was created just for you. Here you will find a simple solution that requires no additional lisp configuration on your part to work. It is ideal for users who are completely new to both Emacs and Org Mode. Simply drop this config file into your home directory, restart Emacs, and you are ready to go.
 ** Org Mode with Default Settings
@@ -21,11 +21,10 @@ What Org Mode looks like with the default settings:
 And what Org Mode looks like with these Better Defaults:
 
 ![[file:images/image-40-better-defaults.png][org mode with better defaults]]
-** Further Reading
-If you came here looking for a more in depth explanation of some of Org Mode's core features, please check out the very detailed write up I did in my [[https://github.com/james-stoup/emacs-org-mode-tutorial/][Emacs Org Mode Tutorial]]. For the new people, you don't need to read that document (it is huge and can be daunting) as it is designed for people who want to really customize their Org Mode configurations. However, it does provide a lot of useful explanations with screenshots, so maybe come back to it once you've gotten some more experience with Org Mode.
+
 * What Is This And Why Do I Need It?
-** Welcome New Users
-A lot of Emacs related documentation assumes you already know quite a bit about the system and the documentation that is geared for new users is often so densely packed with information that it can be difficult to orient yourself. In short, it can be overwhelming. This is especially true for new users who don't care about "THE POWER OF EMACS" but instead just want to try out Org Mode.
+** Learning Org Mode is Hard
+A lot of Emacs related documentation assumes you already know quite a bit about the system and the documentation that is geared for new users is often so densely packed with information that it can be difficult to orient yourself. In short, it can be overwhelming. This is especially true for new users who don't care about "THE POWER OF EMACS(™)" but instead just want to try out Org Mode.
 
 The good news is that Org Mode "just works" right out of the box. The bad news is that the defaults are not great and without a lot of customization, it isn't clear *at all* that any of this stuff is actually useful. I discovered this first hand when I helped a new user get started in Org Mode. My ~.emacs~ file is over a thousand lines long with the Org Mode section easily spanning several hundreds lines. So when this new user saw my version of Org Mode and compared it to their version of Org Mode, they were rather disappointed. Where was the magic? Why did mine look fancy and theirs look so plain? And what did they have to do to get from where they were to where I was. I could have told them to just play with it for a year or two and then they would eventually get an idea of what they needed, but I knew if I did that they would just find another solution. What to do?
 
@@ -59,16 +58,24 @@ The ~.emacs~ file has two main parts to it. The first part deals with improving 
  - better fonts
  - better bullets
 * Installation
+These steps will walk you through how to make your version of Emacs look and feel exactly like the version shown in all the screen shots here. I would recommend new users follow these steps so everything looks the same as the tutorial to minimize confusion. However, afterwards feel free to install additional themes, fonts, or UI packages.
+
 ** Installing the File
-To make your version of Emacs and Org Mode look like the screenshots below, download the ~.emacs~ file in this repo and either copy the contents into your existing ~.emacs~ file or overwrite it entirely. Then restart Emacs, open (or create) an Org file and you should a much nicer looking version of Org. To verify Org looks different you can download the ~org-better-defaults.org~ file in this repo and open it.
+To make your version of Emacs and Org Mode look like the screenshots below, download the ~.emacs~ file in this repo and either copy the contents into your existing ~.emacs~ file or overwrite it entirely, then restart Emacs. The first time you do this Emacs is going to download and install a bunch of files. There will be lots of install and configuration messages printed to various buffers and the entire thing might look a bit intimidating. Once you've installed everything it might look something like this:
+
+[[file:images/image-3-fonts-installed.png][initial Emacs install]]
+
+Don't worry if yours looks different. Just let the install finish (it will stop print log messages when its done) and then close it and restart Emacs. Things should look much better at that point.
+
 ** Selecting the Treemacs Project Root
-Treemacs is the file browser you will see on the left side of Emacs in all the screenshots here. Treemacs is incredibly useful not only because it shows you your files, but because it also will show you the headings contained within any Org files it finds. This is a wonderful way to easily scan through an Org document.
+You will get a Treemacs dialog box when you launch Emacs for the first time with this new configuration. Don't be alarmed, Treemacs is just a nice file browser. Select the ~org~ directory located in your home directory and click OK. Don't worry if you don't already have an ~org~ directory, Emacs will create one for you. This is where Emacs is going to expect to find all of your ~.org~ files. 
 
-When you start Emacs with this new ~.emacs~ file for the first time, you will get a dialog box that gives you the option of choosing the root directory for Treemacs. Once you have become more comfortable using Emacs, Org Mode, and Treemacs I encourage you to add new projects to Emacs and further tweak your setup to best suit your needs. However, in this case just select the ~org~ directory located in your home directory and click OK. Don't worry if you don't already have an ~org~ directory, Emacs will create one for you. This is where Emacs is going to expect to find all of your ~.org~ files. 
+Treemacs is incredibly useful not only because it displays your files, but because it also shows you the headings contained within any Org files it finds. This is a wonderful way to easily scan through an Org document. You will see the Treemacs file browser on the left hand side of all the screenshots here.
+
 ** Light or Dark Mode
-I have found that most users prefer their text editor to have a dark theme and so all the screenshots here will reflect that. The theme used in this tutorial is called ~deeper-blue~. To change the theme follow these steps:
+I have found that most users prefer their text editor to have a dark theme and so all the screenshots here will reflect that. The theme used in this tutorial is called ~deeper-blue~ and it is one of the default themes that come with Emacs. To change the theme follow these steps:
 
-1. From the top menu select: *Options* -> *Customize Emacs* -> *Custom Themes*
+1. From the top menu select: *Options -> Customize Emacs -> Custom Themes*
 2. Check the box beside ~deeper-blue~
 3. Click *Save Theme Settings*
 4. Type ~q~ to quit that menu
@@ -87,16 +94,26 @@ and change it to this:
 #+end_src
 
 Then restart Emacs. The colors should now be more in keeping with a light mode style.
-** Increasing the Font Size
-The last thing you might want to change is the font size. By default Emacs sets the font size to 10 point. That is pretty small. If, like me, you are old enough that your eyes don't like that, then here is how you increase the font.
 
-1. From the top menu select: *Options* -> *Set Default Font...*
+** Increasing the Font Size
+The last UI option that you might want to change is the font size. By default Emacs sets the font size to 10 point. That is pretty small. If, like me, you are old enough that your eyes don't like that, then here is how you increase the font.
+
+1. From the top menu select: *Options -> Set Default Font...*
 2. Select ~Source Code Pro Regular~ as the font
 3. Increase the font size to however large you would like
 4. Press the *Select* button
-5. From the top menu select: *Options* -> *Save Options*
+5. From the top menu select: *Options -> Save Options*
 
 That's it. From now on Emacs should default to your larger font selection.   
+
+** Installing Icons
+Part of the new defaults you have installed is support for All The Icons. This allows Emacs to add pretty icons to various parts of your UI to make things look nicer. However, before this will work you need to download the icons it will display. To do that follow these steps:
+
+1. Press the ~Alt~ key and the ~x~ key to bring up the command buffer
+2. Type ~all-the-icons-install-fonts~ and press return
+3. That's it, just give it a minute while the files download
+
+That is it. Now your system should look like the one used in this tutorial. 
 
 * I've Installed It, Now What?
 If you've already installed the config file and restarted Emacs, then it is time to begin your journey into productivity! Here are your next steps. First, finish reading this section so you understand the broad concepts that will be discussed here. Then, once you have a rough idea of the concepts, work your way through the tutorial so you can understand how someone might apply those concepts to real world tasks. Finally, take what you have learned here and apply it to your own notes as you leverage what you've learned to become more productive.
@@ -316,12 +333,10 @@ I hope you found this simple tutorial useful. Emacs and Org Mode combine to make
 
 Likewise I want to stress to all new users that everything contained in this repo is just one way you can use Org Mode to organize your life. This isn't the *right* way because there is no universal *right* way, only a way that works for you. If you find some of these features useful but not others, then only use what you want. If you want to tweak the configurations listed here to better suite your tastes, then do so with my blessing. I sincerely hope that this software improves your life to the same degree it has improved mine. With that I leave you to go forth and do great things.
 
+** Further Reading
+If you came here looking for a more in depth explanation of some of Org Mode's core features, please check out the very detailed write up I did in my [[https://github.com/james-stoup/emacs-org-mode-tutorial/][Emacs Org Mode Tutorial]]. For the new people, you don't need to read that document (it is huge and can be daunting) as it is designed for people who want to really customize their Org Mode configurations. However, it does provide a lot of useful explanations with screenshots, so maybe come back to it once you've gotten some more experience with Org Mode.
 
 
 
-include notes on A,B, and C levels of importance!
-
-include note about comment tags and how to activate them
 
 
-include a suggestion for my favorite dark mode theme
